--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+* {
+  margin: 0;
+}
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: top;
+  height: 100vh;
+  padding: 2vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  display: flex;
+  background-color: #f7f6f6;
+  height: 80vh;
+  width: 90%;
+  gap: 2vw;
+  padding-top: 5vw;
+  padding-bottom: 5vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  border-radius: 1.2%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar {
+  width: 25%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #dddddd;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar-item {
+  margin: 2rem;
+  line-height: 3rem;
+}
+.page-contants {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 75%;
+  gap: 3vh;
+}
+.page-top {
+  display: flex;
+  flex: 2;
+  gap: 2vw;
+  justify-content: space-evenly;
+}
+.reviews,
+.rating,
+.analysis {
+  padding: 1%;
+  width: 100%;
+  line-height: 2rem;
+  background-color: #dddddd;
+}
+.information {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  line-height: 4rem;
+  flex: 3;
+}
+.visitors {
+  display: flex;
+  flex-direction: column;
+  flex: 3;
+  background-color: #dddddd;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.visitor-data {
+  flex: 3;
+  background-color: #bebdbd;
+  margin: 2%;
+}
+h2 {
+  font-size: 1.4rem;
+  font-family: "Courier New", Courier, monospace;
+  line-height: 4rem;
+}
+h3 {
+  font-size: 1.2rem;
+  font-family: "Courier New", Courier, monospace;
+  line-height: 4rem;
+}
+
+p {
+  font-size: 1.1rem;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
 }
